2003-06-14  Moritz Schulte  <moritz@g10code.com>

	* basic.c: Replaced calls to gcry_strerror with calls to
	gpg_strerror.
	(check_one_md): Adjust for new gcry_md_copy API.

	* tsexp.c: Likewise.
	* keygen.c: Likewise.

2003-06-12  Moritz Schulte  <moritz@g10code.com>

	* basic.c: Changed here and there, reorganized pubkey checks,
	added DSA and ELG keys.

2003-06-09  Moritz Schulte  <moritz@g10code.com>

	* basic.c, keygen.c, pubkey.c, register.c, tsexp.c: Changed to use
	new API.
	
2003-06-01  Moritz Schulte  <moritz@g10code.com>

	* tsexp.c (canon_len): Adjust for new gcry_sexp_canon_len API.

2003-05-26  Moritz Schulte  <moritz@g10code.com>

	* basic.c (verify_one_signature): Adjust for libgpg-error.
	(check_pubkey_sign): Likewise.
	(check_pubkey): Likewise.
	* basic.c (check_pubkey_sign): Likewise.
	* tsexp.c (canon_len): Likewise.
	(back_and_forth_one): Likewise.

2003-04-27  Moritz Schulte  <moritz@g10code.com>

	* pubkey.c: Changed the sample private key to contain the
	identifier `openpgp-rsa' instead of `rsa'.

	* basic.c (check_digests): Enabled/fixed some tests for TIGER.

2003-04-17  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am (TESTS): Removed `register' for now.

2003-04-17  Moritz Schulte  <moritz@g10code.com>

	* basic.c (check_digests): Include checks for SHA512 and SHA384.

2003-04-16  Moritz Schulte  <moritz@g10code.com>

	* basic.c (check_one_md): Also test md_copy.

2003-04-07  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am (TESTS): Added register.

	* register.c: New file.

2003-03-30  Simon Josefsson  <jas@extundo.com>

	* basic.c (check_one_cipher): New.  Test CTR.
	(main): Call it.
	(check_ciphers): Check CTR mode.

2003-03-26  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am (TESTS): Added pubkey.

	* pubkey.c: New file.

2003-03-22  Simon Josefsson  <jas@extundo.com>

	* basic.c (check_cbc_mac_cipher): New.
	(main): Use it.

2003-03-19  Werner Koch  <wk@gnupg.org>
